--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.0.0-rc.1",
+    "styled-components": "^5.3.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
